# nendo_plugin_library_postgres

./: .gitignore  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 594dc8613eca_initialize_embedding_table.py
docs/: config.md
src/nendo_plugin_library_postgres/: __init__.py  config.py  model.py  plugin.py  storage.py
tests/: test_embedding_extension.py  test_library.py  test_plugin_data.py
